# pyspark-labs

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
ci-cd-flow/: ci.sh
config/: pysparklabs.env
datasets/cloudera/stackexchange/posts_all_csv/: .part-00000-d9ea1070-4499-4113-9289-46e1ca783584-c000.csv.crc  part-00000-d9ea1070-4499-4113-9289-46e1ca783584-c000.csv
datasets/text/: speech.txt
init/: prepare_data_posts_all_csv.py
labs/config/: __init__.py  conf_loader.py  core-site.xml  env.py  file.py  labs.local.conf  labs.prod.conf  spark.local.conf
labs/handlers/: exceptions.py
labs/helpers/: dict.py  path_wrapper.py  spark.py
labs/logging/: formatter.py  logger.py  logging.local.conf
labs/manips/: manip1.py
labs/manips/dataframes/: dataframe_columns.py  dataframe_filter_sort.py  dataframe_hive.py  dataframe_join_aggregate_group.py  dataframe_load.py  dataframe_null_values.py  dataframe_udfs.py  dataframe_window.py
labs/manips/rdd/: aggregation_manip.py  join_combine_union_manip.py  partition_manip.py
labs/storage/: fs.py
scraping/: scraping.py  tn.html  tn_fr.json
