[metadata]
name=pysparklabs
version=0.1.0
description=pysaprklabs
long_description=pysaprklabs advanced examples
author=Aymen MOUSSI
author_email=moussi.gl@gmail.com
url=https=//www.pysaparklabs.tn
license=MIT

packages =find:

install_requires =
	dotmap
	findspark
	geopandas
	geopy
	kneed
	numpy
	pandas
	pyarrow
	pyhocon
	python-dateutil
	pyspark==2.4.3
	scipy
	shapely
	sklearn
	six

include_package_data = true

[options.extras_require]
develop =
  pip
  wheel
  setuptools
	requests
test =
  black
	unidecode
	pytest
	pytest-cov
	behave
	allure-behave
doc =
	sphinx
	sphinx_rtd_theme


[options.entry_points]
console_scripts =
    run_app =app.run:run
